src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Image_Uploaded_At__c</fullName>
        <description>Timestamp in milliseconds when the request for upload image was send from FE.</description>
        <inlineHelpText>Timestamp in milliseconds when the request for upload image was send from FE.</inlineHelpText>
        <label>Image Uploaded At</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>